--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="projects">
         <div class="project">
             <h3>Project 1</h3>
-            <p>Description of the project.</p>
+            <p>A JavaScript applications that integrate REST APIs using OAuth, allowing seamless data exchange between two different platforms. </p>
             <a href="https://github.com/yourusername/project1">GitHub Repo</a>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>Description of another project.</p>
+            <p>A Java and MySQL project where I developed database-driven applications, reinforcing my understanding of backend development and data management.</p>
             <a href="https://github.com/yourusername/project2">GitHub Repo</a>
         </div>
     </div>
