--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 
     <h2>Contact</h2>
     <p>Email: andrewr1130@gmail.com</p>
-    <p>LinkedIn: <a href="www.linkedin.com/in/andrew-rengel-959085354">My LinkedIn</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/andrew-rengel-959085354">My LinkedIn</a></p>
 </body>
 </html>
