--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
         body {
             font-family: Arial, sans-serif;
             text-align: center;
